<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.kelompok3.rplinformatika.svhomeuser.Pemesanan.PesananUser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BERHASIL MEMESAN"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="PEMBERITAHUAN"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pemberitahuan"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/syarat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/KTP" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/KK" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BuktiGaji" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Rules"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rules"/>

    <Button
        android:id="@+id/btnOK"
        android:layout_marginTop="190dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="OKE"
        android:background="@color/colorAccent"/>
</LinearLayout>